fix hp overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -140,7 +140,7 @@ body{
     margin-top: 2px;
     margin-left: 2px;
     margin-right: -2px;
-    margin-bottom: -2px;
+    margin-bottom: 18px;
     box-shadow: 4px 4px $mud;
 }
 
